<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.GiveAdvertiseActivity">

    <Button
        android:id="@+id/btn_goback"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/goback"/>

    <ImageView
        android:id="@+id/select_car_picture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/selectimage"
        android:onClick="selectImage"/>
    <EditText
        android:id="@+id/advertise_title"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/select_car_picture"
        android:hint="@string/title"/>
    <EditText
        android:id="@+id/car_owner_name"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/advertise_title"
        android:hint="@string/advertiser"/>
    <EditText
        android:id="@+id/car_brand"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/car_owner_name"
        android:hint="@string/car_brand"/>
    <EditText
        android:id="@+id/car_price"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/car_brand"
        android:layout_centerHorizontal="true"
        android:hint="@string/car_price"
        android:inputType="number"/>
    <EditText
        android:id="@+id/car_year"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/car_price"
        android:layout_centerHorizontal="true"
        android:hint="@string/car_year"
        android:inputType="number"/>
    <EditText
        android:id="@+id/car_fuel"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/car_year"
        android:layout_centerHorizontal="true"
        android:hint="@string/car_fuel"/>
    <EditText
        android:id="@+id/car_gear"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/car_fuel"
        android:layout_centerHorizontal="true"
        android:hint="@string/car_gear"/>
    <EditText
        android:id="@+id/car_km"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/car_gear"
        android:layout_centerHorizontal="true"
        android:hint="@string/kilometer"
        android:inputType="number"/>
    <EditText
        android:id="@+id/phone_number"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/car_km"
        android:layout_centerHorizontal="true"
        android:hint="@string/phone_number"
        android:inputType="phone"/>
    <Button
        android:id="@+id/btn_give_advertise"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/phone_number"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_background"
        android:text="@string/give_advertise"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="5dp" />

</RelativeLayout>